fixed some spelling errors, cleaned up some access modifiers to more clearly represent the intended usage